fixed admin nav height on mobile

--- a/src/styles/pages/admin.module.css
+++ b/src/styles/pages/admin.module.css
@@ -33,6 +33,6 @@
 
 @media (max-width: 500px) {
   .headingNav {
-    height: 12vh;
+    height: 18vh;
   }
 }
